--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-md-components": "file:../react-native-md-components-0.1.52.tgz",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
