--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,8 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-md-components": "file:../react-native-md-components-0.1.53.tgz",
+    "react-native-reanimated": "^2.2.4",
+    "react-native-redash": "^14.2.2",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
