--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-reanimated": "^2.2.0",
