--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
     "@types/react-native-vector-icons": "^6.4.8",
+    "@types/styled-components": "^5.1.10",
+    "@types/styled-components-react-native": "^5.1.1",
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
@@ -61,9 +63,7 @@
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.18.0",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3",
-    "@types/styled-components": "^5.1.10",
-    "@types/styled-components-react-native": "^5.1.1"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -109,15 +109,15 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^5.11.11",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.3.0"
   }
